# trsmount

./: .gitignore  README.md  catasm.py  debug_sys_files.py  find_end.py  inspect_direntry.py  inspect_ran10.py  pyproject.toml  requirements.txt  setup.sh  superzap.py  test.a80  trs80_driver.py  trs80_fuse.py  trsmount.sh
.zout/: 3DTTTTAS_fixed.1000.cas  3DTTTTAS_fixed.1500.cas  3DTTTTAS_fixed.250.cas  3DTTTTAS_fixed.ams  3DTTTTAS_fixed.bds  3DTTTTAS_fixed.cim  3DTTTTAS_fixed.cmd  3DTTTTAS_fixed.hex  3DTTTTAS_fixed.lst  3DTTTTAS_fixed.mds  3DTTTTAS_fixed.tap  test.lst
Formula/: trsmount.rb
